navbar, increased font, fixed spacing colors, rouned button

--- a/frontend/src/Base.less
+++ b/frontend/src/Base.less
@@ -14,7 +14,7 @@
 
   .title {
     font-size: 23pt;
-    color: #686b69;
+    color: #3473a5;
     margin-right: 20px;
     white-space: nowrap;
     max-width: 100%;
