--- a/frontend/src/Shrunk.less
+++ b/frontend/src/Shrunk.less
@@ -12,17 +12,25 @@
   min-height: calc(100vh - 64px - 70px) !important;
 }
 
-.logout-menu {
-  //background-color: #cc0e32;
-  float: right;
-  color: #E9BDCA;
-}
-
-.logout-menu:hover {
-  color: white;
-}
-
 .role {
   color: white;
   pointer-events: none;
 }
+
+.nav-text {
+  font-size: 1.2em;
+  color: #eda6b8;
+}
+
+.user-btn{
+  background-color:#cc0e32;
+  color: #eda6b8;
+  font-size: 1.2em;
+}
+.user-btn:hover{color: white;}
+
+.logout {
+  color: #eda6b8;
+  font-size: 1.2em;
+}
+.logout:hover {color: white;}
