--- a/frontend/src/components/LinkRow.less
+++ b/frontend/src/components/LinkRow.less
@@ -2,8 +2,8 @@
 
 .primary-row {
   .link-title {
-    font-size: 23pt;
-    color: #3473a5;
+    font-size: 21pt;
+    color: #686b69;
     margin-right: 20px;
     white-space: nowrap;
     max-width: 100%;
